# amote

./: .gitignore  Cargo.toml  main.py  pyproject.toml  train.py  train_word.py
examples/: train.rs
src/: processor.rs  system.py
src/core/: signal.py
src/processor/: base.py  core.py  core.rs  input.rs  memory.py  memory.rs  output.rs  system.rs
src/processor/input/: state.py  vec.py
src/processor/output/: match.py  position.py
src/test/: convert.py  test.py  word.py
