[project]
name = "amote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "setuptools<81",
    "text2vec>=1.3.8",
    "torch>=2.10.0",
]
